# app-framework

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  pytest.ini  run_test.py
pageObjects/: basePage.py
pageObjects/locators/: locator_add_note.py  locator_first_open.py  loginLocators.py
pageObjects/pages/: add_note_page.py  loginPage.py  page_first_open.py
testDatas/: addnotedata.yaml
testcases/: conftest.py  test_add_note_pytest.py  test_login_pytest.py
utils/: desired_caps.py  get_csvdata.py  get_path.py  get_yaml.py
