[tool.poetry]
name = "framework"
version = "0.1.0"
description = ""
authors = ["Fusheng <fusheng.zhang@thoughtworks.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.2.0"
appium-python-client = "^2.7.1"
pre-commit = "^2.20.0"
allure-pytest = "^2.11.1"
pyyaml = "^6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
